New changes added

--- a/consultancy.html
+++ b/consultancy.html
@@ -116,7 +116,7 @@
                 <!-- Service 3: Environmental Compliance -->
                 <div class="col-md-4">
                     <div class="service-card shadow-sm p-4 rounded fade-in">
-                        <img src="static/images/oil-and-gas-job-1.jpg" class="img-fluid rounded mb-3" alt="Environmental Compliance">
+                        <img src="static/green3.jpg" class="img-fluid rounded mb-3" alt="Environmental Compliance">
                         <h3>Environmental Compliance</h3>
                         <p>We ensure your operations meet all relevant environmental regulations and standards. This includes audits, assessments, and ongoing compliance support.</p>
                     </div>
