--- a/imotrainlvl.html
+++ b/imotrainlvl.html
@@ -101,7 +101,7 @@
                 <!-- Level 1 -->
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card training-card shadow-sm fade-in">
-                        <img src="static/images/training6.jpg" class="card-img-top" alt="Level 1 Training">
+                        <img src="static/images/training2.webp" class="card-img-top" alt="Level 1 Training">
                         <div class="card-body ">
                             <h3 class="card-title">IMO Level 1</h3>
                             <p class="card-text">Introduction to oil spill response, designed for personnel responsible for on-site operations during oil spill incidents.</p>
@@ -123,7 +123,7 @@
                 <!-- Level 3 -->
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card training-card shadow-sm fade-in">
-                        <img src="static/images/training.webp" class="card-img-top" alt="Level 3 Training">
+                        <img src="static/training.jpg" class="card-img-top" alt="Level 3 Training">
                         <div class="card-body">
                             <h3 class="card-title">IMO Level 3</h3>
                             <p class="card-text">Advanced training for decision-makers and senior managers overseeing large-scale oil spill response operations.</p>
