--- a/oilsboom.html
+++ b/oilsboom.html
@@ -90,7 +90,7 @@
                 <!-- Second Row: Image Left, Text Right -->
                 <div class="content-row reverse">
                     <div class="image-item fade-in">
-                        <img src="static/images/oil-skimmer-desmi.webp" alt="Skimmer Attachment" class="hover-zoom">
+                        <img src="static/roboom.jpg" alt="Skimmer Attachment" class="hover-zoom">
                         <p class="image-caption">Skimmer Attachment - Enhances recovery efficiency by integrating with oil booms.</p>
                     </div>
                     <div class="content-text slide-up">
@@ -126,7 +126,7 @@
                         <p>Invest in the future of environmental protection with Samdus. Our commitment to innovation, quality, and sustainability positions us as a leader in the oil spill containment industry. Partner with us to leverage cutting-edge containment solutions that ensure safety, compliance, and environmental stewardship.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/powerpack.jpg" alt="Containment Solutions" class="hover-zoom" loading="lazy">
+                        <img src="static/contboom.jpg" alt="Containment Solutions" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Containment Solutions - Innovative technologies for comprehensive oil spill response.</p>
                     </div>
                 </div>
