--- a/oilspillresponse.html
+++ b/oilspillresponse.html
@@ -74,7 +74,7 @@
             <!-- Equipment Card 1 -->
             <div class="equipment-card fade-in">
                 <div class="equipment-image">
-                    <img src="static/images/oilboom.jpg" alt="Oil Spill Response Equipment">
+                    <img src="static/oilboom55.jpg" alt="Oil Spill Response Equipment">
                 </div>
                 <div class="equipment-content">
                     <h2>Advanced Oil Containment Booms</h2>
@@ -91,7 +91,7 @@
                     <a href="oilskimmers.html" class="btn btn-read-more">Read More</a>
                 </div>
                 <div class="equipment-image">
-                    <img src="static/images/oil-skimmer-desmi.webp" alt="Oil Skimmers">
+                    <img src="static/skimmer2.jpg" alt="Oil Skimmers">
                 </div>
             </div>
 
