--- a/personnelsupp.html
+++ b/personnelsupp.html
@@ -115,12 +115,12 @@
                             <img src="static/boat.jpg" alt="Rapid Response Team" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                         <div class="image-small fade-in">
-                            <img src="static/images/Nigeria-crude-oil-2.webp" alt="Environmental Management" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/shoreline.jpg" alt="Environmental Management" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                     </div>
                     <div class="image-row">
                         <div class="image-medium fade-in">
-                            <img src="static/images/oilpersonnel5.jpg" alt="Training Session" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
+                            <img src="static/mechcon.jpg" alt="Mechaanical Containment & Response" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
                         </div>
                         <div class="image-small fade-in">
                             <img src="static/images/Ghanas-Petroleum-Sector.jpg" alt="Consulting Experts" class="img-fluid rounded shadow-lg" onclick="openModal(this)">
