--- a/productoverview.html
+++ b/productoverview.html
@@ -250,7 +250,7 @@
             <!-- Powerpacks -->
             <div class="product-wrapper fade-in-up">
                 <div class="product-image">
-                    <img src="static/images/desmi-power-pack.webp" alt="Powerpacks">
+                    <img src="static/powerpack7.jpg" alt="Powerpacks">
                 </div>
                 <div class="product-content">
                     <h2>Powerpacks</h2>
