--- a/pumps.html
+++ b/pumps.html
@@ -168,7 +168,7 @@
                 <!-- Fourth Row: Image Left, Text Right -->
                 <div class="content-row reverse">
                     <div class="image-item fade-in">
-                        <img src="static/images/5.jpg" alt="Advanced Pumping Equipment" class="hover-zoom" loading="lazy">
+                        <img src="static/images/training.webp" alt="Advanced Pumping Equipment" class="hover-zoom" loading="lazy">
                         <p class="image-caption">Advanced Pumping Equipment - Engineered for high efficiency and reliability in extreme conditions.</p>
                     </div>
                     <div class="content-text slide-up">
