--- a/vacuumsystem.html
+++ b/vacuumsystem.html
@@ -146,7 +146,7 @@
                         <p>The RO-VAC MINI is a compact and portable vacuum system specifically engineered for the efficient suction of oils and liquids from ground surfaces or water bodies. Unlike conventional pumps, the RO-VAC MINI utilizes a high-powered vacuum pump capable of extracting oil from the surface of water or land with unmatched precision. An optional storage hopper provides a convenient solution for temporary storage of recovered oils, making the RO-VAC MINI a versatile tool for rapid deployment in diverse spill scenarios.</p>
                     </div>
                     <div class="image-item">
-                        <img src="static/images/oilvacuumsystem.jpg" alt="RO-VAC MINI" class="hover-zoom">
+                        <img src="static/powpack.jpg " alt="RO-VAC MINI" class="hover-zoom">
                         <p class="image-caption">RO-VAC MINI - Portable vacuum system ideal for quick oil recovery from ground and water surfaces.</p>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                 <!-- RO-VAC MKII -->
                 <div class="content-row reverse">
                     <div class="image-item">
-                        <img src="static/images/DSC00279.jpg" alt="RO-VAC MKII" class="hover-zoom">
+                        <img src="static/powerpack2.jpg" alt="RO-VAC MKII" class="hover-zoom">
                         <p class="image-caption">RO-VAC MKII - Versatile and powerful tool for suction of liquids and oils.</p>
                     </div>
                     <div class="content-text">
@@ -178,7 +178,7 @@
                 <!-- RO VAC 4000 -->
                 <div class="content-row reverse">
                     <div class="image-item">
-                        <img src="static/powpack.jpg" alt="RO VAC 4000" class="hover-zoom">
+                        <img src=" static/images/oilvacuumsystem.jpg" alt="RO VAC 4000" class="hover-zoom">
                         <p class="image-caption">RO VAC 4000 - Combined vacuum, storage, and transportation system.</p>
                     </div>
                     <div class="content-text">
