--- a/operationexe.html
+++ b/operationexe.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-6 image-grid">
                     <div class="image-card" data-aos="zoom-in">
-                        <img src="static/mach.jpg" alt="Oil Pump" class="img-fluid rounded">
+                        <img src="static/innovate2.jpg" alt="Oil Pump" class="img-fluid rounded">
                         <div class="image-overlay">
                             <p class="image-caption">Innovative Oil Pump Technology</p>
                         </div>
