Update oilspillresponse.html image and title changed

--- a/oilspillresponse.html
+++ b/oilspillresponse.html
@@ -98,10 +98,10 @@
             <!-- Equipment Card 3 -->
             <div class="equipment-card fade-in">
                 <div class="equipment-image">
-                    <img src="static/images/desmi-power-pack.webp" alt="Power Packs">
+                    <img src="static/powerpack7.jpg" alt="Power Packs">
                 </div>
                 <div class="equipment-content">
-                    <h2>Portable Power Packs</h2>
+                    <h2>Power Packs</h2>
                     <p>Our power packs are reliable sources of energy for all types of oil spill response equipment. Compact and portable, they provide the necessary power for remote operations, ensuring that your response team has the tools they need to operate effectively in any situation.</p>
                     <a href="powerpacks.html" class="btn btn-read-more">Read More</a>
                 </div>
