Update operationexe.html bullet point removed

--- a/operationexe.html
+++ b/operationexe.html
@@ -82,9 +82,9 @@
                 <div class="col-md-6 content-section">
                     <div class="content-box" data-aos="fade-right">
                         <h2>Driving Innovation in Oil and Gas Operations</h2>
-                        <p>Our commitment to operational excellence is deeply rooted in our desire to lead the industry in innovation and technology. By adopting advanced drilling technologies, we ensure that our operations are not only efficient but also environmentally responsible. Our approach integrates cutting-edge tools and data analytics to enhance decision-making, improve operational efficiency, and reduce risks.</p>
+                        <p>Our commitment to operational excellence is deeply rooted in our desire to lead the industry in innovation and technology. By adopting advanced technologies, we ensure that our operations are not only efficient but also environmentally responsible. Our approach integrates cutting-edge tools and data analytics to enhance decision-making, improve operational efficiency, and reduce risks.</p>
                         <ul class="benefits-list">
-                            <li><i class="fas fa-check-circle"></i> Advanced Drilling Technologies for Enhanced Efficiency</li>
+                            
                             <li><i class="fas fa-check-circle"></i> Real-time Monitoring Systems for Improved Safety</li>
                             <li><i class="fas fa-check-circle"></i> Predictive Maintenance with AI-driven Analytics</li>
                             <li><i class="fas fa-check-circle"></i> Sustainable Practices with Renewable Energy Integration</li>
