Pictures changed and correction made

--- a/about.html
+++ b/about.html
@@ -40,9 +40,12 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -122,7 +125,7 @@
                     <div class="stat-card" data-aos="fade-up" data-aos-delay="500">
                         <strong><p>Waste Reduction Across All Projects</p></strong>
                     </div>
-                    <a href="" class="btn mt-4">Learn More</a>
+                    <a href="genbusprinc.html" class="btn mt-4">Learn More</a>
                 </div>
             </div>
             <div class="col-md-6 image-grid">
