--- a/ancillaries.html
+++ b/ancillaries.html
@@ -126,9 +126,12 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -160,14 +163,14 @@
     <section class="content-section">
         <div class="container">
             <div class="content-wrapper">
-                <!-- OPA90 Deck Spill Kit -->
+                <!--  Deck Spill Kit -->
                 <div class="content-row">
                     <div class="content-text slide-up">
-                        <h2>OPA90 Deck Spill Kit</h2>
-                        <p>The OPA90 Deck Spill Kit is a versatile and comprehensive solution, meticulously designed in collaboration with leading ship owners and operators. This kit includes essential components such as oil absorbents, hand tools, containers, and pumps, ensuring rapid response to spill incidents on deck. Compact and cost-effective, this kit can be strategically positioned in multiple locations, enhancing preparedness for any spill scenario. The kit's robust, waterproof, and impact-resistant storage container ensures durability and reliability in harsh maritime environments. Additionally, the kit's contents can be customized to meet specific customer requirements, providing flexibility and adaptability in spill response planning.</p>
+                        <h2> Spill Kit</h2>
+                        <p>Our Spill Kit is a versatile and comprehensive solution, meticulously designed in collaboration with leading ship owners and operators. This kit includes essential components such as oil absorbents, hand tools, containers, and pumps, ensuring rapid response to spill incidents on deck. Compact and cost-effective, this kit can be strategically positioned in multiple locations, enhancing preparedness for any spill scenario. The kit's robust, waterproof, and impact-resistant storage container ensures durability and reliability in harsh maritime environments. Additionally, the kit's contents can be customized to meet specific customer requirements, providing flexibility and adaptability in spill response planning.</p>
                     </div>
                     <div class="image-item fade-in">
-                        <img src="static/images/desmi-deck-spill-kit.webp" alt="OPA90 Deck Spill Kit" class="hover-zoom">
+                        <img src="static/images/desmi-deck-spill-kit.webp" alt= "Spill Kit" class="hover-zoom">
                         <p class="image-caption">Spill Kit - Essential for rapid response to spill incidents on deck.</p>
                     </div>
                 </div>
