--- a/consultancy.html
+++ b/consultancy.html
@@ -46,9 +46,12 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -84,7 +87,7 @@
                     <p>At Samdus Oil and Gas, we offer consultancy services that help organizations prepare for, respond to, and recover from oil spill incidents. With years of industry experience, we bring unmatched expertise in oil spill management, environmental compliance, and risk mitigation. Our consultancy services are customized to meet the unique needs of your operations, ensuring that you meet regulatory standards while safeguarding the environment.</p>
                 </div>
                 <div class="col-md-6 fade-in">
-                    <img src="static/images//Ghanas-Petroleum-Sector.jpg" alt="Consultancy" class="img-fluid rounded shadow-lg">
+                    <img src="static/consult.jpg" alt="Consultancy" class="img-fluid rounded shadow-lg">
                 </div>
             </div>
         </div>
@@ -99,7 +102,7 @@
      
                 <div class="col-md-4">
                     <div class="service-card shadow-sm p-4 rounded fade-in">
-                        <img src="static/images/Nigeria-crude-oil-2.webp" class="img-fluid rounded mb-3" alt="Response Planning">
+                        <img src="static/crew2.jpg" class="img-fluid rounded mb-3" alt="Response Planning">
                         <h3>Response Strategy</h3>
                         <p>Our experts craft response strategies that allow for immediate action during an oil spill incident. This includes equipment provisioning, personnel training, and risk assessment.</p>
                     </div>
