--- a/emergencyprep.html
+++ b/emergencyprep.html
@@ -44,9 +44,12 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -83,7 +86,7 @@
                     <p>We believe in proactive readiness, and our training covers a broad range of emergency situations—from small-scale spills to large offshore accidents. Our goal is to ensure that our teams are capable of responding to any situation, regardless of its complexity or severity.</p>
                 </div>
                 <div class="col-lg-6 order-lg-2 order-1">
-                    <img src="static/images/training.webp" alt="Emergency Preparedness Drill" class="img-fluid rounded shadow-lg">
+                    <img src="static/emergprep.jpg" alt="Emergency Preparedness Drill" class="img-fluid rounded shadow-lg">
                 </div>
             </div>
         </div>
@@ -96,7 +99,7 @@
             <div class="row">
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card drill-card shadow-sm">
-                        <img src="static/images/training3.webp" class="card-img-top" alt="Tabletop Exercises">
+                        <img src="static/crisis.jpg" class="card-img-top" alt="Tabletop Exercises">
                         <div class="card-body">
                             <h3 class="card-title text-center">Tabletop Exercises</h3>
                             <p class="card-text">Simulated emergency scenarios that allow teams to practice coordination and decision-making in a controlled, stress-free environment.</p>
@@ -106,7 +109,7 @@
 
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card drill-card shadow-sm">
-                        <img src="static/images/oilpersonnel3.jpg" class="card-img-top" alt="Live Response Drills">
+                        <img src="static/crew1.jpg" class="card-img-top" alt="Live Response Drills">
                         <div class="card-body">
                             <h3 class="card-title text-center">Live Response Drills</h3>
                             <p class="card-text">Real-time drills involving field teams, equipment deployment, and immediate responses, mirroring actual spill scenarios in both inland and offshore environments.</p>
@@ -116,7 +119,7 @@
 
                 <div class="col-md-4 d-flex align-items-stretch mb-4">
                     <div class="card drill-card shadow-sm">
-                        <img src="static/images/5.jpg" class="card-img-top" alt="Full-Scale Drills">
+                        <img src="static/spillresponse.jpg" class="card-img-top" alt="Full-Scale Drills">
                         <div class="card-body">
                             <h3 class="card-title text-center">Full-Scale Drills</h3>
                             <p class="card-text">Comprehensive drills that integrate every aspect of a spill response, including coordination with local authorities and environmental agencies.</p>
@@ -132,7 +135,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 emergprep">
-                    <img src="static/images/emerprep.jpg" alt="Preparedness Team" class="img-fluid rounded shadow-lg">
+                    <img src="static/crew3.jpg" alt="Preparedness Team" class="img-fluid rounded shadow-lg">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="pb-3">Why Preparedness Matters</h2>
