--- a/imotrainlvl.html
+++ b/imotrainlvl.html
@@ -42,9 +42,12 @@
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -77,7 +80,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 fade-in">
-                    <img src="static/images/training.webp" alt="IMO Training" class="img-fluid rounded shadow-lg">
+                    <img src="static/training2.jpg" alt="IMO Training" class="img-fluid rounded shadow-lg">
                 </div>
                 <div class="col-md-6 fade-in">
                     <h2>International Maritime Organization (IMO) Training</h2>
