--- a/index.html
+++ b/index.html
@@ -78,15 +78,18 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServices" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownServices">
+                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownServices">
                             <li><a class="dropdown-item" href="oilspillresponse.html">Oil Spill Response Equipment Supply</a></li>
                             <li><a class="dropdown-item" href="respservices.html">Response Service</a></li>
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
