--- a/respservices.html
+++ b/respservices.html
@@ -224,9 +224,12 @@ body {
                             <li><a class="dropdown-item" href="equipementhire.html">Equipment Hire</a></li>
                             <li><a class="dropdown-item" href="personnelsupp.html">Personnel Support</a></li>
                             <li>
+                                <li><a class="dropdown-item" href="emergencyprep.html">Emergency Preparedness</a></li>
+                                <li>
                             <a class="dropdown-item" href="consultancy.html">Consultancy</a></li>
-                            <a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
-                            <a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            <li><a class="dropdown-item" href="imotrainlvl.html">IMO Level Training</a></li>
+                            <li></li><a class="dropdown-item" href="procurement.html">Procurement</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -262,7 +265,7 @@ body {
                     <p>At Samdus Oil and Gas, we understand the critical importance of rapid and efficient response in the event of an oil spill. Our specialized team is equipped with cutting-edge technology and industry expertise to manage oil spill incidents effectively, minimizing environmental impact and safeguarding your operations. Our response services are tailored to meet the unique challenges of each spill scenario, ensuring that every situation is handled with the utmost precision and care.</p>
                 </div>
                 <div class="col-lg-6 fade-in">
-                    <img src="static/images/responseteam.jpg" alt="Oil Spill Response Team" class="img-fluid rounded shadow">
+                    <img src="static/boat.jpg" alt="Oil Spill Response Team" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
