--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="col-md-6 content-container slide-up" id="welcome">
                     <h2><b>Welcome To Samdus</b></h2>
                     <p>SAMDUS is a private and wholly owned Nigerian oilfield Services Company. Although incorporated in 2012, the company was founded by Nigerians with an extensive track record, market-leading insight, and experience in the Nigerian oil & gas industry. We currently operate only in Nigeria and are dedicated to our partners and communities through our enduring commitment and sustainability program.</p>
-                    <p>Samdus is a global leader in the oil and gas industry, dedicated to advancing energy solutions that are both sustainable and efficient. With decades of experience and a commitment to innovation, we are shaping the future of services and collaboration in the oil industry.</p>
+                    <p>Samdus is a leader in the oil and gas industry, dedicated to advancing energy solutions that are both sustainable and efficient. With decades of experience and a commitment to innovation, we are shaping the future of services and collaboration in the oil industry.</p>
                     <p>Our mission is to deliver exceptional value through cutting-edge technology, unparalleled expertise, and a focus on safety and environmental stewardship.</p>
                 </div>
             </div>
