Hosting Samdus Oil and Gas

--- a/powerpacks.html
+++ b/powerpacks.html
@@ -4,30 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Powerpacks - Samdus Oil and Gas</title>
+
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Explore Samdus' state-of-the-art Powerpacks, designed for efficient power solutions in oil spill response and recovery. Enhance your operational efficiency with our robust and versatile equipment.">
-    <meta name="keywords" content="Powerpacks, Oil Spill Recovery, Samdus Oil and Gas, Environmental Protection, Spill Response Equipment, Industrial Power Solutions">
+    <title>Powerpacks | Advanced Power Solutions | Samdus Oil and Gas</title>
+    <meta name="description" content="Discover the advanced Powerpacks from Samdus Oil and Gas, engineered for reliable power in oil spill response and industrial operations. Explore efficient, flexible, and sustainable power solutions for your critical needs.">
+    <meta name="keywords" content="Powerpacks, Oil Spill Response Powerpacks, Industrial Power Solutions, Samdus Oil and Gas, Reliable Power Solutions, Environmental Operations, Emergency Power Solutions">
     <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://www.samdusoilandgas.com/powerpacks">
 
-    <!-- Open Graph Meta Tags for Social Media -->
-    <meta property="og:title" content="Powerpacks - Samdus Oil and Gas">
-    <meta property="og:description" content="Discover the robust and versatile Powerpacks from Samdus, engineered for superior performance in spill response and industrial applications.">
-    <meta property="og:image" content="static/images/powerpacks1.jpg">
-    <meta property="og:url" content="https://www.samdusoilandgas.com/powerpacks">
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Powerpacks | Advanced Power Solutions | Samdus Oil and Gas">
+    <meta property="og:description" content="Explore Samdus' state-of-the-art Powerpacks, providing efficient and reliable power solutions for oil spill response and industrial operations.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/powerpacks">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/images/powerpacks1.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas Limited">
 
-    <!-- CSS Libraries -->
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Powerpacks | Advanced Power Solutions | Samdus Oil and Gas">
+    <meta name="twitter:description" content="Samdus Powerpacks deliver efficient and reliable power for critical operations. Designed for flexibility and sustainability in industrial and environmental applications.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/images/powerpacks1.jpg">
+
+    <!-- Structured Data: Service Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Powerpacks for Oil Spill Response and Industrial Applications",
+        "provider": {
+            "@type": "Organization",
+            "name": "Samdus Oil and Gas Limited",
+            "url": "https://www.samdusoilandgas.com",
+            "logo": "https://www.samdusoilandgas.com/static/images/logo/samdus_white.png",
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+2349034469608",
+                "contactType": "Customer Service",
+                "email": "info@samdus.com"
+            },
+            "sameAs": [
+                "https://www.facebook.com/samdusoilandgas",
+                "https://www.linkedin.com/company/samdusoilandgas",
+                "https://twitter.com/samdusoilandgas"
+            ]
+        },
+        "areaServed": "Global",
+        "availableChannel": {
+            "@type": "ServiceChannel",
+            "serviceUrl": "https://www.samdusoilandgas.com/contact",
+            "availableLanguage": "English"
+        }
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS and Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link href="products.css" rel="stylesheet">
+    <link rel="stylesheet" href="products.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-
     <style>
        
         
