--- a/oilspillresponse.html
+++ b/oilspillresponse.html
@@ -4,17 +4,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oil Spill Response Equipment Supply - Samdus</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Oil Spill Response Equipment Supply | Samdus Oil and Gas</title>
+    <meta name="description" content="Discover high-quality oil spill response equipment from Samdus, including booms, skimmers, and power packs. Efficient and reliable solutions for effective spill management.">
+    <meta name="keywords" content="Oil Spill Response Equipment, Containment Booms, Oil Skimmers, Power Packs, Spill Response Solutions, Samdus Oil and Gas">
+    <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdusoilandgas.com/oilspillresponse">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Oil Spill Response Equipment Supply | Samdus Oil and Gas">
+    <meta property="og:description" content="Samdus offers top-tier oil spill response equipment, from advanced containment booms to high-performance skimmers and portable power packs.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/oilspillresponse">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/oilboom55.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Oil Spill Response Equipment Supply | Samdus Oil and Gas">
+    <meta name="twitter:description" content="Explore Samdus' reliable and efficient oil spill response equipment for swift spill containment and recovery.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/oilboom55.jpg">
+
+    <!-- Structured Data: Product Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ProductGroup",
+        "name": "Oil Spill Response Equipment",
+        "image": [
+            "https://www.samdusoilandgas.com/static/oilboom55.jpg",
+            "https://www.samdusoilandgas.com/static/skimmer2.jpg",
+            "https://www.samdusoilandgas.com/static/powerpack7.jpg"
+        ],
+        "description": "Samdus offers premium oil spill response equipment, including containment booms, oil skimmers, and power packs, designed for effective and efficient spill management.",
+        "brand": {
+            "@type": "Brand",
+            "name": "Samdus Oil and Gas"
+        },
+        "offers": {
+            "@type": "AggregateOffer",
+            "priceCurrency": "USD",
+            "lowPrice": "Contact for Pricing",
+            "offerCount": 3
+        }
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS and Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="services.css">
-    <style>
- 
-    </style>
+
+
 </head>
+
 
    
 <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
