--- a/operationexe.html
+++ b/operationexe.html
@@ -4,17 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operational Excellence - Samdus Oil and Gas Limited</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Operational Excellence | Samdus Oil and Gas Limited</title>
+    <meta name="description" content="Discover how Samdus Oil and Gas achieves operational excellence through innovation, technology, and sustainability. Learn about our commitment to safety, efficiency, and cutting-edge solutions.">
+    <meta name="keywords" content="Operational Excellence, Oil and Gas, Innovation in Oil Industry, Sustainable Energy, Samdus Oil and Gas, Safety in Oil Operations">
+    <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdusoilandgas.com/operational-excellence">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Operational Excellence | Samdus Oil and Gas Limited">
+    <meta property="og:description" content="Learn how Samdus Oil and Gas delivers operational excellence by adopting innovative technologies, ensuring safety, and driving sustainability in the oil and gas industry.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/operational-excellence">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/innovate2.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas Limited">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Operational Excellence | Samdus Oil and Gas Limited">
+    <meta name="twitter:description" content="Explore our commitment to operational excellence through innovation, safety, and sustainability at Samdus Oil and Gas.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/innovate2.jpg">
+
+    <!-- Structured Data: Organization Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Samdus Oil and Gas Limited",
+        "url": "https://www.samdusoilandgas.com",
+        "logo": "https://www.samdusoilandgas.com/static/images/logo/samdus_white.png",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+2349034469608",
+            "contactType": "Customer Service",
+            "email": "info@samdus.com"
+        },
+        "sameAs": [
+            "https://www.facebook.com/samdusoilandgas",
+            "https://www.linkedin.com/company/samdusoilandgas",
+            "https://twitter.com/samdusoilandgas"
+        ]
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS and Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <!-- AOS Library CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <!-- Font Awesome for Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="operational_excellence.css">
+
 </head>
 
 <body>  
