--- a/personnelsupp.html
+++ b/personnelsupp.html
@@ -1,22 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personnel Support - Samdus Oil and Gas</title>
-    <!-- External CSS and Fonts -->
+
+    <!-- SEO Meta Tags -->
+    <title>Personnel Support Services | Samdus Oil and Gas</title>
+    <meta name="description" content="Samdus Oil and Gas provides certified and highly trained personnel for oil spill response, environmental management, and emergency operations. Discover how our personnel support services enhance operational efficiency and ensure environmental compliance.">
+    <meta name="keywords" content="Personnel Support, Oil Spill Response Personnel, Samdus Oil and Gas, Environmental Management, Oil Spill Emergency Support, Skilled Oil Spill Personnel, Health and Safety Officers, Environmental Scientists">
+    <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdusoilandgas.com/personnel-support">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Personnel Support Services | Samdus Oil and Gas">
+    <meta property="og:description" content="Explore how Samdus Oil and Gas delivers exceptional personnel support services with skilled experts in oil spill response, environmental management, and emergency preparedness.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/personnel-support">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/images/oilpersonnel2.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas Limited">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Personnel Support Services | Samdus Oil and Gas">
+    <meta name="twitter:description" content="Need highly skilled personnel for oil spill response or environmental operations? Partner with Samdus Oil and Gas for certified professionals and expert support.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/images/oilpersonnel2.jpg">
+
+    <!-- Structured Data: Service Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Personnel Support for Oil Spill Response",
+        "provider": {
+            "@type": "Organization",
+            "name": "Samdus Oil and Gas Limited",
+            "url": "https://www.samdusoilandgas.com",
+            "logo": "https://www.samdusoilandgas.com/static/images/logo/samdus_white.png",
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+2349034469608",
+                "contactType": "Customer Service",
+                "email": "info@samdus.com"
+            },
+            "sameAs": [
+                "https://www.facebook.com/samdusoilandgas",
+                "https://www.linkedin.com/company/samdusoilandgas",
+                "https://twitter.com/samdusoilandgas"
+            ]
+        },
+        "areaServed": "Global",
+        "availableChannel": {
+            "@type": "ServiceChannel",
+            "serviceUrl": "https://www.samdusoilandgas.com/contact",
+            "availableLanguage": "English"
+        }
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS and Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="services.css">
     <link rel="stylesheet" href="personnel.css">
-    <style>
-  
 
-    </style>
+
+
 </head>
+
 
 <body>
        
