--- a/productoverview.html
+++ b/productoverview.html
@@ -3,7 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Overview - Samdus Oil and Gas</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Product Overview | Advanced Oil Spill Response Equipment | Samdus Oil and Gas</title>
+    <meta name="description" content="Explore Samdus' extensive range of oil spill response equipment, including containment booms, skimmers, powerpacks, pumps, tanks, and workboats. Innovative, reliable, and built for operational excellence.">
+    <meta name="keywords" content="Product Overview, Oil Spill Response Equipment, Containment Booms, Skimmers, Pumps, Powerpacks, Vacuum Systems, Workboats, Samdus Oil and Gas">
+    <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdusoilandgas.com/productoverview">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Product Overview | Advanced Oil Spill Response Equipment | Samdus Oil and Gas">
+    <meta property="og:description" content="Discover Samdus Oil and Gas' cutting-edge solutions for effective oil spill response, including containment booms, skimmers, pumps, tanks, and more.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/productoverview">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/images/trailervacuumsystem.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas Limited">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Product Overview | Advanced Oil Spill Response Equipment | Samdus Oil and Gas">
+    <meta name="twitter:description" content="Explore our innovative and reliable oil spill response equipment, including booms, skimmers, tanks, and vacuum systems.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/images/trailervacuumsystem.jpg">
+
+    <!-- Structured Data: Product Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ProductGroup",
+        "name": "Oil Spill Response Equipment",
+        "description": "Explore a range of innovative oil spill response equipment, including containment booms, skimmers, pumps, tanks, powerpacks, and vacuum systems.",
+        "image": "https://www.samdusoilandgas.com/static/images/trailervacuumsystem.jpg",
+        "brand": {
+            "@type": "Brand",
+            "name": "Samdus Oil and Gas",
+            "logo": "https://www.samdusoilandgas.com/static/images/logo/samdus_white.png"
+        },
+        "offers": {
+            "@type": "Offer",
+            "url": "https://www.samdusoilandgas.com/productoverview",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/InStock"
+        },
+        "isAccessoryOrSparePartFor": [
+            {
+                "@type": "Product",
+                "name": "Oil Containment Booms",
+                "image": "https://www.samdusoilandgas.com/static/desmi_boom.jpg",
+                "description": "High-performance oil containment booms designed for marine environments.",
+                "brand": "Samdus Oil and Gas"
+            },
+            {
+                "@type": "Product",
+                "name": "Oil Skimmers",
+                "image": "https://www.samdusoilandgas.com/static/equip.jpg",
+                "description": "Innovative oil skimmers for efficient oil recovery and minimal environmental impact.",
+                "brand": "Samdus Oil and Gas"
+            }
+        ]
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
