--- a/respservices.html
+++ b/respservices.html
@@ -3,17 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Response Services - Samdus Oil and Gas</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Response Services for Oil Spills | Expert Environmental Solutions | Samdus Oil and Gas</title>
+    <meta name="description" content="Discover Samdus' expert oil spill response services designed for effective containment, recovery, and environmental protection. Minimize impact with rapid and reliable solutions.">
+    <meta name="keywords" content="Oil Spill Response, Environmental Protection, Oil Spill Management, Response Services, Samdus Oil and Gas, Oil Spill Cleanup, Emergency Spill Response">
+    <meta name="author" content="Samdus Oil and Gas">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdusoilandgas.com/respservices">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Response Services for Oil Spills | Expert Environmental Solutions | Samdus Oil and Gas">
+    <meta property="og:description" content="Explore Samdus' expert oil spill response services. Tailored solutions to minimize environmental impact and safeguard operations with rapid response and advanced cleanup." >
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdusoilandgas.com/respservices">
+    <meta property="og:image" content="https://www.samdusoilandgas.com/static/images/oilresponse.jpg">
+    <meta property="og:site_name" content="Samdus Oil and Gas Limited">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Response Services for Oil Spills | Expert Environmental Solutions | Samdus Oil and Gas">
+    <meta name="twitter:description" content="Partner with Samdus Oil and Gas for expert oil spill response services. Fast, efficient, and tailored solutions to safeguard the environment and your operations.">
+    <meta name="twitter:image" content="https://www.samdusoilandgas.com/static/images/oilresponse.jpg">
+
+    <!-- Structured Data: Service Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "name": "Oil Spill Response Services",
+        "description": "Expert services for oil spill containment, recovery, cleanup, and environmental protection. Tailored solutions to minimize impact and ensure compliance with regulations.",
+        "provider": {
+            "@type": "Organization",
+            "name": "Samdus Oil and Gas",
+            "url": "https://www.samdusoilandgas.com",
+            "logo": "https://www.samdusoilandgas.com/static/images/logo/samdus_white.png"
+        },
+        "areaServed": {
+            "@type": "Country",
+            "name": "Nigeria"
+        },
+        "serviceType": "Oil Spill Response and Cleanup"
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
+
+    <!-- CSS Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="services.css" rel="stylesheet">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- AOS Library CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <!-- Custom CSS -->
-   <link rel="stylesheet" href="services.css">
+
    <style>
     /* General Styles */
 body {
