--- a/vacuumsystem.html
+++ b/vacuumsystem.html
@@ -14,9 +14,9 @@
     <meta property="og:title" content="Vacuum Systems - Samdus Oil and Gas">
     <meta property="og:description" content="Discover the innovative Vacuum Systems by Samdus for optimal oil recovery and environmental protection.">
     <meta property="og:image" content="https://img.freepik.com/free-photo/steel-pipelines-cables-plant_1359-145.jpg?t=st=1724645560~exp=1724649160~hmac=14e051d15bf61c07e8155fdf9284528300b1ba20137e5ba40e153a4d2f8edb2b&w=740">
-    <meta property="og:url" content="https://www.samdusoilandgas.com/vacuum-systems">
+    <meta property="og:url" content="https://www.samdus.com/vacuum-systems">
     <meta property="og:type" content="website">
-    
+    <link rel="icon" href="static/images/logo/samdus_white.png" type="image/x-icon">
     <!-- CSS Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
