--- a/workboats.html
+++ b/workboats.html
@@ -3,17 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workboats - Samdus Oil and Gas</title>
-    <!-- Bootstrap CSS -->
+
+    <!-- SEO Meta Tags -->
+    <title>Workboats - Samdus Oil and Gas | Durable and Reliable Solutions</title>
+    <meta name="description" content="Explore Samdus Oil and Gas' fleet of high-quality workboats designed for offshore support, marine logistics, and environmental response. Our vessels are built for reliability and efficiency.">
+    <meta name="keywords" content="Samdus Workboats, Offshore Support Vessels, Marine Logistics, Oil Spill Response Boats, Durable Workboats, Marine Solutions, Oil and Gas Vessels">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.samdus.com/workboats.html">
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
+    <meta property="og:title" content="Workboats - Samdus Oil and Gas | Durable and Reliable Marine Solutions">
+    <meta property="og:description" content="Discover reliable workboats by Samdus Oil and Gas. Our vessels are designed for offshore support, logistics, and environmental response.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.samdus.com/workboats.html">
+    <meta property="og:image" content="https://www.samdus.com/static/images/logo/samdus logo.png"> <!-- Update with a more visually engaging workboat-related image if available -->
+    <meta property="og:site_name" content="Samdus Oil and Gas">
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Workboats - Samdus Oil and Gas | Durable and Reliable Marine Solutions">
+    <meta name="twitter:description" content="Reliable workboats designed by Samdus Oil and Gas for offshore operations and environmental response.">
+    <meta name="twitter:image" content="https://www.samdus.com/static/images/logo/samdus logo.png"> <!-- Same note: Replace with an engaging image if possible -->
+
+    <!-- Structured Data: Product Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Workboats by Samdus Oil and Gas",
+        "image": "https://www.samdus.com/static/images/logo/samdus logo.png",
+        "description": "Durable and reliable workboats for offshore support, marine logistics, and oil spill response by Samdus Oil and Gas.",
+        "brand": {
+            "@type": "Brand",
+            "name": "Samdus Oil and Gas"
+        },
+        "url": "https://www.samdus.com/workboats.html",
+        "offers": {
+            "@type": "Offer",
+            "priceCurrency": "USD",
+            "price": "Contact for Pricing",
+            "itemCondition": "https://schema.org/NewCondition",
+            "availability": "https://schema.org/InStock",
+            "seller": {
+                "@type": "Organization",
+                "name": "Samdus Oil and Gas"
+            }
+        }
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="static/images/logo/samdus logo.png" type="image/x-icon">
+
+    <!-- CSS and Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- AOS Library CSS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="products.css">
     <style>
        
